# BoardGameArena_Discord_Turn_Bot

./: .env.example  .gitignore  LICENSE  README.en.md  README.fr.md  README.md  bga_client.py  bot.py  commands_bga.py  database.py  models.py  monitor.py  pyproject.toml  requirements.txt  schema.sql  utils.py
.github/workflows/: ci.yml
bga_turn/: __init__.py
docs/: privacy.html  terms.html
src/bga_turn/: app.py  bga_client.py  commands_bga.py  database.py  i18n.py  models.py  monitor.py  schema.sql  utils.py
